fixing of hover on ios

--- a/css/style.css
+++ b/css/style.css
@@ -134,8 +134,6 @@ a {
   transition: transform 1s;
   background-color: rgba(0,0,0,0.6);
   border-radius: 10px;
-  cursor: pointer;
-
 }
 
 .skill-item:hover .svg-transform {
